QtQml: Do not evaluate bindings in invalid contexts

If the context is gone, we are technically still able to evaluate
QProperty bindings, but we really shouldn't.

Pick-to: 6.8 6.5
Fixes: QTBUG-137270
Change-Id: I323c26d59788e4b318ec4733e1593e761beb4b6f
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit ad6d2bc49668a48a585ef596f5230353ae433c94)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 297819e46768651e586d8b49ec48585f89763245)