tests/auto/qml/qqmlbinding/tst_qqmlbinding.cpp
@@ -41,6 +41,7 @@ private slots:
     void disabledOnReadonlyProperty();
     void delayed();
     void bindingOverwriting();
+    void bindingInDeadContext();
     void bindToQmlComponent();
     void bindingDoesNoWeirdConversion();
     void bindNaNToInt();
@@ -497,6 +498,40 @@ void tst_qqmlbinding::bindingOverwriting()
     QCOMPARE(messageHandler.messages().size(), 3);
 
     QLoggingCategory::setFilterRules(QString());
+}
+
+void tst_qqmlbinding::bindingInDeadContext()
+{
+    // We manually control the deletion order of the objects here.
+    // This is what some of our views also do. One way to prevent
+    // the engine from deleting objects is to parent them to the
+    // application.
+
+    QScopedPointer<QObject> o;
+    QScopedPointer<QObject> inner1;
+    {
+        QScopedPointer<QObject> inner2;
+
+        QQmlEngine engine;
+        QQmlComponent c(&engine, testFileUrl("bindingInDeadContext.qml"));
+
+        QVERIFY2(c.isReady(), qPrintable(c.errorString()));
+        o.reset(c.create());
+        QVERIFY(!o.isNull());
+        o->setParent(QCoreApplication::instance());
+
+        inner1.reset(o->property("inner1").value<QObject *>());
+        QVERIFY(inner1);
+        inner1->setParent(QCoreApplication::instance());
+
+        inner2.reset(o->property("inner2").value<QObject *>());
+        QVERIFY(inner2);
+        inner2->setParent(QCoreApplication::instance());
+    }
+
+    // The objectName binding did not get re-evaluated when inner2 died
+    // because the engine was gone already.
+    QCOMPARE(inner1->objectName(), "aa");
 }
 
 void tst_qqmlbinding::bindToQmlComponent()
